<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activity.TeamActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white"
                android:elevation="4dp"
                app:subtitleTextColor="@color/white"/>
        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleEnabled="false"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:layout_gravity="center_horizontal">

            <ImageView
                    android:id="@+id/team_image"
                    android:layout_width="@dimen/team_logo_img_size"
                    android:layout_height="@dimen/team_logo_img_size"
                    android:paddingTop="@dimen/very_small_margin"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"/>

            <TextView android:id="@+id/team_name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:textStyle="bold"
                      android:textSize="@dimen/text_h1_size"
                      android:padding="@dimen/very_small_margin"
                      android:textColor="@color/white"/>
            <TextView android:id="@+id/team_year"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:textStyle="bold"
                      android:textSize="@dimen/text_h3_size"
                      android:textColor="@color/white"/>
            <TextView android:id="@+id/team_stadium"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:textStyle="bold"
                      android:textSize="@dimen/text_h3_size"
                      android:textColor="@color/white"/>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
                android:id="@+id/team_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/white"
                app:tabMode="fixed"
                app:tabGravity="fill"
                android:paddingBottom="@dimen/very_small_margin"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
                android:id="@+id/team_viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>